# atlas-tdd-februar-2024

./: README.md
EuroToDollarSimplified/: CMakeLists.txt
EuroToDollarSimplified/source/presenter/: euro_to_dollar_presenter_impl.h
EuroToDollarSimplified/tests/: CMakeLists.txt
EuroToDollarSimplified/tests/presenter/: euro_to_dollar_presenter_test.cpp  euro_to_dollar_presenter_test.h
EuroToDollarSimplified/tests/services/: euro_to_dollar_calculator_impl_test.cpp
FakeDemo/tests/: globaltest.cpp
LaborDemo/: CMakeLists.txt
LaborDemo/source/services/: Dependency.h  DependencyImpl.h  MyServiceUsingDependency.h
LaborDemo/tests/: CMakeLists.txt
ParameterTestProjekt/tests/: CMakeLists.txt
PersonenServiceProjekt/: CMakeLists.txt
PersonenServiceProjekt/tests/: CMakeLists.txt
Tag1_01StapelProject/: CMakeLists.txt
Tag1_01StapelProject/tests/: CMakeLists.txt  test.cpp
Tag1_02SchweineProjekt/: CMakeLists.txt
Tag1_02SchweineProjekt/source/: Dependency.h  DependencyImpl.h  MyServiceUsingDependency.h  Stapel.h  main.cpp
Tag1_02SchweineProjekt/source/math/: MultipiziererOptimierer.h  Multiplizierer.h  MultipliziererImpl.h
Tag1_02SchweineProjekt/source/tiere/: Schwein.h
Tag1_02SchweineProjekt/tests/: CMakeLists.txt  MockDependency.h  MockMultiplizierer.h  MultipiziererOptimiererTest.cpp  MultipiziererOptimiererTest.h  MyServiceUsingDependencyTest.cpp  MyServiceUsingDependencyTest.h  StapelTest.cpp  StapelTest.h
Tag1_02SchweineProjekt/tests/google/docs/: faq.md  gmock_for_dummies.md
Tag1_02SchweineProjekt/tests/tiere/: SchweinTest.cpp  SchweinTest.h
(+20 files in other folders)
